<resources>
    <string name="app_name">Buscaminas</string>
    <string name="btn_ayuda">Ayuda</string>
    <string name="btn_start">Empezar Partida</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_principal">Ir pantalla principal</string>
    <string name="lbl_alias">Alias</string>
    <string name="lbl_tamaño">Tamaño columna</string>
    <string name="lbl_tiempo">Control de tiempo</string>
    <string name="lbl_minas">% minas</string>
    <string name="txt_ayuda">Selecciona las casillas, y evita las minas segun los resultados de las casillas adyacentes.</string>
    <string name="txt_mostrar_results">Mostrar Resultados</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="detalles_de_la_partida">Detalles de la partida:</string>
</resources>
