<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="udl.eps.frb2.buscaminas.PantallaPrincipal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ayuda"
        android:id="@+id/button"
        android:layout_marginTop="71dp"
        android:layout_centerHorizontal="true"
        android:onClick="mostrarAyuda" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="iniciar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_mostrar_results"
        android:id="@+id/button5"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="mostrarResultados" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_salir"
        android:id="@+id/button3"
        android:layout_below="@+id/button5"
        android:layout_alignStart="@+id/button"
        android:onClick="botonSalir" />

</RelativeLayout>
